feat: JDK 8u65 降级 + CC链精确过滤 + README/首页更新
- 降级 Docker JDK 至 8u65（CC1 链的 AnnotationInvocationHandler 在此版本可触发）
- class14-20 各 CC 链靶场添加精确黑名单过滤，只允许本链 payload 通过
- 更新 README.md 过滤策略说明和各链映射表
- 更新 landing/index.html 注意事项及挑战描述
- 内置 ysoserial.jar 到 Docker 镜像
- 父 POM 移除 poc 子模块引用（poc 为独立 Maven 项目）
- 更新 .dockerignore / .gitignore

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>